# SchreckNET_QML_PoC

./: CMakeLists.txt  CODING_STYLE.md  CardTypeSection.qml  GameController.cpp  GameController.h  GameListItem.qml  GameLobby.qml  GameLobbyController.cpp  GameLobbyController.h  GameTabView.qml  GameView.qml  LoginController.cpp  LoginController.h  LoginScreen.qml  Main.qml  main.cpp
src/: CMakeLists.txt  main.cc
src/client/: CMakeLists.txt  README.md  appSchreckNET_QML_PoC.html  config.json  game_controller.cc  game_controller.h  game_lobby_controller.cc  game_lobby_controller.h  login_controller.cc  login_controller.h  main.cc  qtloader.js  serve.py
src/client/controllers/: game_controller.cc  game_controller.h  game_lobby_controller.cc  game_lobby_controller.h  login_controller.cc  login_controller.h  main.cc
src/client/game/: game_player.h
src/client/models/: card.cc  card.h  deck_model.cc  deck_model.h  game_players_model.cc  game_players_model.h
src/client/qml/: Main.qml  qmldir
src/client/qml/components/: CardTypeSection.qml  GameListItem.qml  PlayerListItem.qml
src/client/qml/views/: GameLobby.qml  GameTabView.qml  GameView.qml  LoginScreen.qml
